--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,34 @@
-aiohttp==3.10.11
+aiohappyeyeballs==2.4.4
+aiohttp==3.10.2
 aiosignal==1.3.1
-annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.7.4
 chardet==3.0.4
 charset-normalizer==3.3.2
-click==8.1.7
-distro==1.9.0
 frozenlist==1.4.1
 googletrans==4.0.0rc1
 h11==0.14.0
 h2==3.2.0
 hpack==3.0.0
 hstspreload==2024.7.1
-httpcore==1.0.7
-httpx>=0.13.3,<=0.27.2
+httpcore==1.0.5
+httpx==0.28.1
 hyperframe==5.2.0
-idna>=2.*,<=3.7
+idna==3.7
 jikanpy-v4==1.0.2
-jiter==0.8.0
-libretranslatepy==2.1.1
-lxml==5.3.0
 multidict==6.0.5
-pydantic==2.10.2
-pydantic_core==2.27.1
-python-telegram-bot==21.8
+mutagen==1.47.0
+python-telegram-bot==21.4
+pytubefix==8.8.5
 requests==2.32.3
 rfc3986==1.5.0
 simplejson==3.19.2
 sniffio==1.3.1
 soupsieve==2.5
 telegram_text==0.2.0
-tqdm==4.67.1
-translate==3.6.1
 typing_extensions==4.12.2
 urllib3==2.2.2
 yarl==1.9.4
+youtube-search==2.1.2
