--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,6 @@ hoshibot-env/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+#DB
+telegramDataBot.db
+testdab.py
